--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,8 @@
     "mongoose": "^8.3.3",
     "validator": "^13.11.0"
   },
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.1.9"
+  }
 }
-
-
